--- a/src/app/incomeandexpenses/incomeandexpenses.component.html
+++ b/src/app/incomeandexpenses/incomeandexpenses.component.html
@@ -4,19 +4,19 @@
       <ul class="nav flex-column">
         <li class="nav-item">
           <a class="nav-link active" href="/incomeandexpenses">
-            <span data-feather="home"></span>
+            <img src="../../../node_modules/feather-icons/dist/icons/file.svg">
             Income and expenses <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/monthlybudget">
-            <span data-feather="file"></span>
-            Monthly budget
+            <fi [name]="file"></fi>
+            My budgets
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/timeperiod">
-            <span data-feather="shopping-cart"></span>
+            <fi [name]="shopping-cart"></fi>
             Time period
           </a>
         </li>
