added pie chart

--- a/src/app/incomeandexpenses/incomeandexpenses.component.html
+++ b/src/app/incomeandexpenses/incomeandexpenses.component.html
@@ -4,20 +4,20 @@
       <ul class="nav flex-column">
         <li class="nav-item">
           <a class="nav-link active" href="/incomeandexpenses">
-            <img src="../../../node_modules/feather-icons/dist/icons/file.svg">
+            <img src="../../assets/euro_symbol.png">
             Income and expenses <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/monthlybudget">
-            <fi [name]="file"></fi>
+            <img src="../../assets/file_copy.png">
             My budgets
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/timeperiod">
-            <fi [name]="shopping-cart"></fi>
-            Time period
+            <img src="../../assets//access_time.png">
+            Date range
           </a>
         </li>
       </ul>
