--- a/src/app/timeperiod/timeperiod.component.html
+++ b/src/app/timeperiod/timeperiod.component.html
@@ -1,33 +1,33 @@
 <div class="row">
-  <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-    <div class="sidebar-sticky">
-      <ul class="nav flex-column">
-        <li class="nav-item">
-          <a class="nav-link" href="/incomeandexpenses">
-            <span data-feather="home"></span>
-            Income and expenses <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/monthlybudget">
-            <span data-feather="file"></span>
-            My budgets
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="/timeperiod">
-            <span data-feather="shopping-cart"></span>
-            Time period
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+        <div class="sidebar-sticky">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link" href="/incomeandexpenses">
+                <img src="../../assets/euro_symbol.png">
+                Income and expenses <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/monthlybudget">
+                <img src="../../assets/file_copy.png">
+                My budgets
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/timeperiod">
+                <img src="../../assets//access_time.png">
+                Date range
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
   <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
     <div
       class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-      <h1 class="h2">Time period</h1>
+      <h1 class="h2">Date range</h1>
     </div>
 
     <form>
